attempt to fix font size on ios

--- a/src/components/StaticCodeBlock/StaticCodeBlock.module.scss
+++ b/src/components/StaticCodeBlock/StaticCodeBlock.module.scss
@@ -17,4 +17,8 @@
   font-size: 16px;
   line-height: 1.5;
   margin: 0px;
+
+  span {
+    font-size: 16px !important;
+  }
 }
